# Tbps_CRC

./: .gitignore  LICENSE  LICENSE.md  README.md
core_src/: crc.sv  crc.svh  crc_byteEn.sv
correctness_verification/: Makefile  board_clk_source.xdc  config.mk
correctness_verification/hdl/: crc_byteEn_tb.sv  crc_tb.sv  xoshiro128ss_simple.sv
correctness_verification/scripts/: run_impl.tcl  run_sim.tcl
performance_evaluation/: Makefile  config.mk
performance_evaluation/constraints/: .gitignore  crc.xdc  crc_byteEn.xdc
performance_evaluation/hdl/: config.svh  crc_byteEn_top.sv  crc_top.sv
performance_evaluation/scripts/: find_fmax_nopipe.tcl  find_pipe_lvl_500mhz.tcl
rtl/: tbps_crc.sv  tbps_crc.svh  tbps_crc_axis.sv
sim/: CMakeLists.txt  run_test.py  tb.sv
tests/correctness_verification/: Makefile
tests/correctness_verification/hdl/: config.svh  crc_byteEn_tb.sv  crc_byteEn_top.sv  crc_top.sv  xoshiro32pp_simple.sv
tests/correctness_verification/scripts/: run_impl.tcl  run_sim.tcl
